// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer() @@init 1`] = `
"Snapshot Diff:
  Comparing two different types of values. Expected undefined but received null."
`;

exports[`reducer() TIMESHEET-PC/ENTITIES/DAILY_OBJECTIVELY_EVENT_LOG_DIALOG/CLEAR 1`] = `
"Snapshot Diff:
  Comparing two different types of values. Expected array but received null."
`;

exports[`reducer() TIMESHEET-PC/ENTITIES/DAILY_OBJECTIVELY_EVENT_LOG_DIALOG/SET 1`] = `
"Snapshot Diff:
  Comparing two different types of values. Expected null but received array."
`;
